
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int scratch ;


 int memset (char*,int ,int) ;
 int xrecieve (int,char*,int) ;

void
xrecieveall(int fd, char *buf, int size)
{
        char scratch[6];

        if (buf == ((void*)0) || size == 0) {
                buf = scratch;
                size = sizeof(scratch);
        }
        memset(buf, 0, size);
        do {
                xrecieve(fd, buf, size);
        } while (buf[3] == '-');
}
